alignment fixed

--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -2,7 +2,15 @@
     font-size: 30px;
     padding: 0px 0px;
     padding: 0px 80px;
+    color: white !important;
   }
   .profile-top{
     border-radius: 50%;
+  }
+  .Navbar-Style{
+    background-color: #17263a;
+    color: white !important;
+  }
+  .nav-link{
+    color: white !important;
   }
